<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.SqliteActivity">

    <TextView
        android:id="@+id/textView_quanLySach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#008000"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/txt_quanLySach"/>
    <Button
        android:id="@+id/btn_themTacGia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_themTacGia"/>
    <Button
        android:id="@+id/btn_xemDanhSachTacGia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_xemDanhSachTacGia"/>
    <Button
        android:id="@+id/btn_quanLySach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_quanLySach"/>
</LinearLayout>
