<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.CreateAuthorActivity">

    <TextView
        android:id="@+id/textView_themMoiTacGia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_themMoiTacGia"
        android:textColor="#FFFFFF" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_maTacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_maTacGia"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/edit_maTacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#FFFFFF">

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_tenTacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tenTacGia"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/edit_tenTacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColor="#FFFFFF">

            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_xoaTrang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_xoaTrang" />

            <Button
                android:id="@+id/btn_luuTacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_luuTacGia" />
        </TableRow>
    </TableLayout>
</LinearLayout>
