<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".Activity.InsertBookActivity">

    <TableRow
        android:id="@+id/table_Row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_tacGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tacGia" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2">

        </Spinner>
    </TableRow>

    <TableRow
        android:id="@+id/table_Row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_tenSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tenSach" />

        <EditText
            android:id="@+id/edit_tenSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:ems="10">

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView_ngayXuatBan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_NXB" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="date" />

        <Button
            android:id="@+id/btn_date"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..." />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/btn_insertBook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/btn_themSach" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TableRow>

    <ListView
        android:id="@+id/listViewBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</TableLayout>
